--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
             <img src="./background.webp" alt="Imagen Background" width="200px"/>
         </section>
     </main>
-    
+    <p>Prueba</p>
 </body>
 </html>
